<resources>
    <string name="app_name">SQLite</string>
    <string name="country">Country</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="read_pdy_fasthelp_membership_aggrement">Read PDY Fasthelp Membership Aggrement</string>
    <string name="agree_amp_create_account"><![CDATA[Agree & Create Account]]></string>
    <string name="sign_in">Sign In</string>
    <string name="have_an_account">Have an account?</string>
    <string name="show_data">Show Data</string>
    <string name="save">SAVE</string>
    <string name="Delete">Delete</string>
</resources>
